# sionic-hackerton

./: .env  .gitignore  README.md  analyze_html.py  citation_relations.csv  debug_download.py  detail_page.html  extract_relations.py  process_complaints.py  process_documents.py  requirements.txt  scrape.py  seoul_youth_allowance_all.csv  seoul_youth_allowance_complaints.csv  seoul_youth_allowance_others.csv  seoul_youth_allowance_others_updated.csv  seoul_youth_allowance_others_with_docnum.csv  setup_and_run.sh  storm_parse_documents.py  storm_parse_usage.md  test_download.sh  test_headers.py  vercel.json
graph_db/: 101_neo4j_study.py  102_neo4j_llm_qa.py  201_neo4j_seed_data.py  202_neo4j_hybrid_rag.py  301_build_real_graph.py  302_add_complaints_node.py  302_update_doc_content.py  303_add_complaints_node.py  303_update_doc_content.py  401_complex_query_test.py  README.md  api_server.py  api_server_real.py  hyde_utils.py  pyproject.toml  test_api.py  test_hyde.py
graph_db/attachments/: 101_parsed.md  105_original.hwpx  107_original.hwpx  108_parsed.md  10_original.hwpx  111_original.hwpx  112_original.hwpx  113_original.hwpx  114_parsed.md  116_parsed.md  118_original.hwpx  118_parsed.md  122_parsed.md  125_parsed.md  130_parsed.md  131_parsed.md  137_parsed.md  138_original.hwpx  139_original.hwpx  13_parsed.md  140_original.hwpx  140_parsed.md  141_original.hwpx  142_parsed.md  143_original.hwpx  146_original.hwpx  146_parsed.md  149_parsed.md  151_parsed.md  153_original.hwpx  153_parsed.md  159_original.hwpx  15_original.hwpx  15_parsed.md  160_original.hwpx  (+68 more)
(+591 files in other folders)
